--- a/task/helm-kubectl.yml
+++ b/task/helm-kubectl.yml
@@ -30,9 +30,8 @@ spec:
             name: $(params.env_secret)
       workingDir: $(workspaces.source.path)
       script: |
-        kubectl config set-cluster k8s --server="$SERVER"
-        kubectl config set clusters.k8s.certificate-authority-data "$CERTIFICATE_AUTHORITY_DATA"
-        kubectl config set-credentials k8s-admin --token="$USER_TOKEN"
+        kubectl config set-cluster k8s --server=$SERVER
+        kubectl config set-credentials k8s-admin --token=$USER_TOKEN
         kubectl config set-context default --cluster=k8s --user=k8s-admin
         kubectl config use-context default
-        $(params.commands[*])
+        $(params.commands)
