--- a/example/trigger.yml
+++ b/example/trigger.yml
@@ -13,7 +13,7 @@ metadata:
   name: github-listener-interceptor
 spec:
   triggers:
-    - name: github-listener
+    - name: github-gateway-listener
       interceptors:
         - github:
             secretRef:
@@ -21,12 +21,26 @@ spec:
               secretKey: secretToken
             eventTypes:
         # CEL 过滤或扩展 Event
-        #- cel:
-        #    filter: "body.action in ['opened', 'synchronize', 'reopened']"
+        - cel:
+            filter: "body.repository.full_name in ['hb-chen/gateway']"
       bindings:
         - ref: pipeline-binding
       template:
         ref: grpc-gateway-pipeline-template
+    - name: github-gmqtt-listener
+      interceptors:
+        - github:
+            secretRef:
+              secretName: github-secret
+              secretKey: secretToken
+            eventTypes:
+        # CEL 过滤或扩展 Event
+        - cel:
+            filter: "body.repository.full_name in ['hb-chen/gmqtt']"
+      bindings:
+        - ref: pipeline-binding
+      template:
+        ref: gmqtt-pipeline-template
   resources:
     kubernetesResource:
       spec:
@@ -71,6 +85,36 @@ spec:
         serviceAccountName: build-bot
         pipelineRef:
           name: grpc-gateway-pipeline
+        workspaces:
+          - name: shared-workspace
+            persistentvolumeclaim:
+              claimName: golang-source-pvc
+        params:
+          - name: url
+            value: $(tt.params.gitrepositoryurl)
+          - name: revision
+            value: $(tt.params.gitrevision)
+---
+apiVersion: triggers.tekton.dev/v1alpha1
+kind: TriggerTemplate
+metadata:
+  name: gmqtt-pipeline-template
+spec:
+  params:
+    - name: gitrevision
+      description: The git revision
+      default: master
+    - name: gitrepositoryurl
+      description: The git repository url
+  resourcetemplates:
+    - apiVersion: tekton.dev/v1beta1
+      kind: PipelineRun
+      metadata:
+        generateName: gmqtt-pipeline-run-
+      spec:
+        serviceAccountName: build-bot
+        pipelineRef:
+          name: gmqtt-pipeline
         workspaces:
           - name: shared-workspace
             persistentvolumeclaim:
