--- a/task/golang-build.yml
+++ b/task/golang-build.yml
@@ -19,6 +19,10 @@ spec:
     - name: packages
       description: "packages to build (default: ./cmd/...)"
       default: "./cmd/..."
+    - name: subdirectory
+      description: subdirectory inside the "source"
+      type: string
+      default: ""
     - name: version
       description: golang version to use for builds
       default: "latest"
@@ -48,7 +52,7 @@ spec:
       script: |
         SRC_PATH="$GOPATH/src/$(params.package)"
         mkdir -p $SRC_PATH
-        cp -R "$(workspaces.source.path)"/* $SRC_PATH
+        cp -R "$(workspaces.source.path)"/$(params.subdirectory)/* $SRC_PATH
         cd $SRC_PATH
         go env
         go build $(params.flags) $(params.packages)
