--- a/example/gmqtt-pipeline.yml
+++ b/example/gmqtt-pipeline.yml
@@ -103,7 +103,7 @@ spec:
       params:
         - name: env_secret
           value: k8s-cluster-config
-        - name: image_digest
-          value: $(tasks.docker-build.results.IMAGE-DIGEST)
+        #- name: image_digest
+        #  value: $(tasks.docker-build.results.IMAGE-DIGEST)
         - name: commands
-          value: helm upgrade --install gmqtt ./gmqtt/helm --namespace gmqtt --no-hooks --set image.repository=registry.cn-hangzhou.aliyuncs.com/hb-chen/gmqtt-gateway --set image.tag=latest --set image.digest=@$(tasks.docker-build.results.IMAGE-DIGEST)
+          value: helm upgrade --install gmqtt ./gmqtt/cicd/helm --namespace gmqtt --no-hooks --set image.repository=registry.cn-hangzhou.aliyuncs.com/hb-chen/gmqtt-gateway --set image.tag=latest --set image.digest=@$(tasks.docker-build.results.IMAGE-DIGEST)
