--- a/example/grpc-gateway-pipeline.yml
+++ b/example/grpc-gateway-pipeline.yml
@@ -97,7 +97,7 @@ spec:
       params:
         - name: env_secret
           value: k8s-cluster-config
-        - name: image_digest
-          value: $(tasks.docker-build.results.IMAGE-DIGEST)
+        #- name: image_digest
+        #  value: $(tasks.docker-build.results.IMAGE-DIGEST)
         - name: commands
           value: helm upgrade --install grpc-gateway ./helm --namespace grpc-gateway --no-hooks --set image.repository=registry.cn-hangzhou.aliyuncs.com/hb-chen/grpc-gateway --set image.tag=latest --set image.digest=@$(tasks.docker-build.results.IMAGE-DIGEST)
