--- a/task/helm-kubectl.yml
+++ b/task/helm-kubectl.yml
@@ -30,9 +30,10 @@ spec:
             name: $(params.env_secret)
       workingDir: $(workspaces.source.path)
       script: |
+        pwd
+        ls -l
         kubectl config set-cluster k8s --server=$SERVER
         kubectl config set-credentials k8s-admin --token=$USER_TOKEN
         kubectl config set-context default --cluster=k8s --user=k8s-admin
         kubectl config use-context default
         $(params.commands)
-\
