--- a/task/helm-kubectl.yml
+++ b/task/helm-kubectl.yml
@@ -13,10 +13,11 @@ spec:
     Use kubectl and helm deploy application
   params:
     - name: image
-      default: dtzar/helm-kubectl:3.1.1
+      default: dtzar/helm-kubectl:3.4.2
       description: kubectl and helm image
-    - name: env_secret
-      description: kubernetes cluster config env secret, include $SERVER $CERTIFICATE_AUTHORITY_DATA and $USER_TOKEN
+    - name: kubeconfig
+      default: k8s-kubeconfig
+      description: kubernetes cluster kubeconfig
     - name: commands
       default: kubectl version
   workspaces:
@@ -25,15 +26,16 @@ spec:
   steps:
     - name: helm-kubectl-deploy
       image: $(params.image)
-      envFrom:
-        - secretRef:
-            name: $(params.env_secret)
       workingDir: $(workspaces.source.path)
       script: |
         pwd
         ls -l
-        kubectl config set-cluster k8s --server=$SERVER
-        kubectl config set-credentials k8s-admin --token=$USER_TOKEN
-        kubectl config set-context default --cluster=k8s --user=k8s-admin
-        kubectl config use-context default
         $(params.commands)
+      volumeMounts:
+        - name: kubeconfig
+          mountPath: "/tekton/home/.kube"
+          readOnly: true
+  volumes:
+    - name: kubeconfig
+      secret:
+        secretName: $(params.kubeconfig)
