--- a/example/grpc-gateway-pipeline.yml
+++ b/example/grpc-gateway-pipeline.yml
@@ -6,6 +6,7 @@ metadata:
 spec:
   workspaces:
     - name: shared-workspace
+    - name: dockerconfig
   params:
     - name: url
     - name: revision
@@ -57,20 +58,7 @@ spec:
         - name: version
           value: 1.15.11
         - name: flags
-          value: -v -o $(workspaces.source.path)/gateway/bin/gateway
-#    - name: docker-build
-#      taskRef:
-#        name: docker-build
-#      runAfter:
-#        - run-build
-#      workspaces:
-#        - name: source
-#          workspace: shared-workspace
-#      params:
-#        - name: image
-#          value: registry.cn-hangzhou.aliyuncs.com/hb-chen/grpc-gateway
-#        - name: insecure_registry
-#          value: registry.cn-hangzhou.aliyuncs.com
+          value: -v -o $(workspaces.source.path)/gateway/bin/linux/gateway
     - name: docker-build
       taskRef:
         name: kaniko
@@ -79,6 +67,8 @@ spec:
       workspaces:
         - name: source
           workspace: shared-workspace
+        - name: dockerconfig
+          workspace: dockerconfig
       params:
         - name: IMAGE
           value: registry.cn-hangzhou.aliyuncs.com/hb-chen/grpc-gateway:latest
@@ -87,9 +77,9 @@ spec:
         - name: CONTEXT
           value: ./gateway/
         - name: EXTRA_ARGS
-          value: "--skip-tls-verify"
-        - name: insecure_registry
-          value: registry.cn-hangzhou.aliyuncs.com
+          value:
+            - "--skip-tls-verify"
+            - "--insecure-registry=registry.cn-hangzhou.aliyuncs.com"
     - name: helm-kubectl-deploy
       taskRef:
         name: helm-kubectl-deploy
@@ -100,4 +90,11 @@ spec:
           workspace: shared-workspace
       params:
         - name: commands
-          value: helm upgrade --install grpc-gateway ./gateway/helm --namespace grpc-gateway --no-hooks --set image.repository=registry.cn-hangzhou.aliyuncs.com/hb-chen/grpc-gateway --set image.tag=latest --set image.digest=@$(tasks.docker-build.results.IMAGE-DIGEST)
+          value: |
+            helm template \
+            --release-name grpc-gateway \
+            --no-hooks \
+            --set image.repository=registry.cn-hangzhou.aliyuncs.com/hb-chen/grpc-gateway \
+            --set image.tag=latest \
+            --set image.digest=@$(tasks.docker-build.results.IMAGE-DIGEST) \
+            ./gateway/helm | kubectl apply -n grpc-gateway -f -
