--- a/example/grpc-gateway-run.yml
+++ b/example/grpc-gateway-run.yml
@@ -2,8 +2,8 @@
 apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
-  name: grpc-gateway-pipeline-run
-  #generateName: grpc-gateway-pipeline-run-
+#  name: grpc-gateway-pipeline-run
+  generateName: grpc-gateway-pipeline-run-
 spec:
   serviceAccountName: build-bot
   pipelineRef:
@@ -17,3 +17,6 @@ spec:
     - name: shared-workspace
       persistentvolumeclaim:
         claimName: golang-source-pvc
+    - name: dockerconfig
+      secret:
+        secretName: dockerconfig
