--- a/example/grpc-gateway-run.yml
+++ b/example/grpc-gateway-run.yml
@@ -20,3 +20,6 @@ spec:
     - name: dockerconfig
       secret:
         secretName: dockerconfig
+    - name: kubeconfig
+      secret:
+        secretName: k8s-kubeconfig
