--- a/example/gmqtt-pipeline.yml
+++ b/example/gmqtt-pipeline.yml
@@ -6,6 +6,8 @@ metadata:
 spec:
   workspaces:
     - name: shared-workspace
+    - name: dockerconfig
+    - name: kubeconfig
   params:
     - name: url
     - name: revision
@@ -53,26 +55,13 @@ spec:
         - name: package
           value: github.com/hb-chen/gmqtt
         - name: packages
-          value: "./gateway/cmd/main.go"
+          value: "./cmd/gateway/main.go"
         - name: subdirectory
           value: "gmqtt"
         - name: version
           value: 1.15.11
         - name: flags
-          value: -v -o $(workspaces.source.path)/gmqtt/gateway/bin/gateway
-#    - name: docker-build
-#      taskRef:
-#        name: docker-build
-#      runAfter:
-#        - run-build
-#      workspaces:
-#        - name: source
-#          workspace: shared-workspace
-#      params:
-#        - name: image
-#          value: registry.cn-hangzhou.aliyuncs.com/hb-chen/gmqtt-gateway
-#        - name: insecure_registry
-#          value: registry.cn-hangzhou.aliyuncs.com
+          value: -v -o $(workspaces.source.path)/gmqtt/bin/linux/gateway
     - name: docker-build
       taskRef:
         name: kaniko
@@ -81,17 +70,19 @@ spec:
       workspaces:
         - name: source
           workspace: shared-workspace
+        - name: dockerconfig
+          workspace: dockerconfig
       params:
         - name: IMAGE
           value: registry.cn-hangzhou.aliyuncs.com/hb-chen/gmqtt-gateway:latest
         - name: DOCKERFILE
           value: ./gmqtt/gateway/Dockerfile
         - name: CONTEXT
-          value: ./gmqtt/gateway/
+          value: ./gmqtt/
         - name: EXTRA_ARGS
-          value: "--skip-tls-verify"
-        - name: insecure_registry
-          value: registry.cn-hangzhou.aliyuncs.com
+          value:
+            - "--skip-tls-verify"
+            - "--insecure-registry=registry.cn-hangzhou.aliyuncs.com"
     - name: helm-kubectl-deploy
       taskRef:
         name: helm-kubectl-deploy
@@ -100,7 +91,15 @@ spec:
       workspaces:
         - name: source
           workspace: shared-workspace
+        - name: kubeconfig
+          workspace: kubeconfig
       params:
         - name: commands
-          value: kubectl version && helm upgrade --install gmqtt ./gmqtt/cicd/helm --namespace gmqtt --no-hooks --set image.repository=registry.cn-hangzhou.aliyuncs.com/hb-chen/gmqtt-gateway --set image.tag=latest --set image.digest=@$(tasks.docker-build.results.IMAGE-DIGEST)
-
+          value: |
+            helm template \
+            --release-name gmqtt \
+            --no-hooks \
+            --set image.repository=registry.cn-hangzhou.aliyuncs.com/hb-chen/gmqtt-gateway \
+            --set image.tag=latest \
+            --set image.digest=@$(tasks.docker-build.results.IMAGE-DIGEST) \
+            ./gmqtt/cicd/helm | kubectl apply -n gmqtt -f -
